# jsonify

./: .gitignore  CMakeLists.txt  Makefile  README.md  bad.jsonc  build.bat  build.ps1  build.sh  data.json  formatter_test.cpp  good.jsonc  jsonformatter.cpp  jsonformatter.h  jsonlinter.cpp  jsonlinter.h  jsonparser.cpp  jsonparser.h  linter_test.cpp  main.cpp  parser_test.cpp  reallybad.json  vscode.json
.github/workflows/: ci.yml
